Fix gif on mobile

--- a/app/assets/stylesheets/_mediaqueries.scss
+++ b/app/assets/stylesheets/_mediaqueries.scss
@@ -38,5 +38,8 @@
   font-size: 16px;
 }
 
+.waiting--gif {
+  height: 200px !important;
+}
 
 }
